# dcmdiff

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example_tags_to_compare.txt  pyproject.toml  setup.cfg  tox.ini
src/dcmdiff/: dcmdiff.py
tests/: test_dcmdiff.py
