[project]
name = "dcmdiff"
version = "1.0.1"
description = "Find differences between DICOM instances, series or studies"
readme = "README.md"
authors = [
    { name = "Stephen Wastling", email = "stephen.wastling@nhs.net" }
]
requires-python = ">=3.13"
dependencies = [
    "pydicom>=3.0.1",
]

[project.scripts]
dcmdiff = "dcmdiff.dcmdiff:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "mock>=5.1.0",
    "pytest>=8.3.3",
    "pytest-console-scripts>=1.4.1",
    "ruff>=0.8.0",
]
